@@ -1,5 +1,6 @@
 Version 2.02.172 - 
 ===============================
+  Don't reinstate still-missing devices when correcting inconsistent metadata.
   Properly handle subshell return codes in fsadm.
   Disallow cachepool creation with policy cleaner and mode writeback.
 
